vi hopes for the best